[package]
name = "chacha-rs"
version = "0.1.0"
authors = ["James Peach <james_peach01@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2.33" }
memmap = "^0.7.0"
rand="^0.8"
sha2="^0.9"